# emry

./: .code-retriever.yml  .emry.yml  .gitignore  Cargo.toml  README.md  test.py
benchmarks/: cli_retriever.py  config.py  convert_dataset.py  metrics.py  requirements.txt  run.py  test_imports.py  test_infrastructure.py  tracker.py  visualize.py  wrapper.py
benchmarks/benchmark_datasets/: curated_test.json  loader.py
benchmarks/results/: 2025-11-23_010000_queries.jsonl  2025-11-23_010000_summary.json
benchmarks/visualizations/: dashboard.html
cli/: Cargo.toml
cli/src/: commands.rs  main.rs  print_snippet.rs  verify_box.rs
cli/src/collision_test/: main.rs  mod_a.rs  mod_b.rs
cli/src/commands/: architecture.rs  ask.rs  cat.rs  context.rs  debug.rs  embedders.rs  embeddings_util.rs  explain.rs  explore.rs  focus.rs  graph.rs  impact.rs  index.rs  index_pipeline.rs  inspect.rs  llm.rs  map.rs  mod.rs  print_snippet.rs  regex_utils.rs  search.rs  status.rs  summaries.rs  ui.rs  utils.rs
core/: Cargo.toml
core/src/: config.rs  lib.rs  models.rs  retriever.rs  scanner.rs
core/src/agent/: brain.rs  llm.rs  mod.rs  prompt.txt  tools.rs
core/src/chunking/: config.rs  cpp.rs  generic.rs  java.rs  mod.rs  python.rs  splitter.rs  tokenizer.rs  typescript.rs
core/src/embeddings/: external.rs  local.rs  mod.rs  ollama.rs
core/src/index/: lexical.rs  manager.rs  mod.rs  regex.rs  vector.rs
core/src/paths/: builder.rs  mod.rs  scorer.rs  selector.rs
core/src/ranking/: features.rs  model.rs
core/src/storage/: mod.rs
core/src/structure/: graph.rs  index.rs  mod.rs  symbols.rs
core/src/summaries/: generator.rs  index.rs  mod.rs  vector.rs
core/tests/: core_tests.rs  path_test.rs
crates/agent/: Cargo.toml
crates/agent/src/: lib.rs
crates/agent/src/cortex/: context.rs  mod.rs  prompts.rs  tool.rs
crates/agent/src/cortex/tools/: architecture.rs  focus.rs  fs.rs  graph.rs  impact.rs  mod.rs  search.rs  workflows.rs
crates/agent/src/llm/: mod.rs
crates/agent/src/ops/: architecture.rs  context.rs  fs.rs  graph.rs  mod.rs  rewriter.rs  search.rs
crates/agent/src/project/: context.rs  embedder.rs  mod.rs  types.rs
crates/agent/src/workflows/: architecture.rs  functional.rs  impact.rs  mod.rs
crates/coderet-agent/: Cargo.toml
crates/coderet-agent/src/: agent.rs  agent_loop.rs  brain.rs  classifier.rs  context.rs  embedder.rs  executor.rs  lib.rs  planner.rs  prompts.rs  synthesizer.rs  types.rs
crates/coderet-agent/src/cortex/: context.rs  mod.rs  prompts.rs
crates/coderet-agent/src/cortex/tools/: fs.rs  graph.rs  search.rs
crates/coderet-agent/src/llm/: mod.rs
crates/coderet-agent/src/tools/: fs.rs  graph.rs  mod.rs  search.rs  summaries.rs
crates/coderet-agent/tests/: review_plan_test.rs  tools_test.rs
crates/coderet-config/: Cargo.toml
crates/coderet-config/src/: error.rs  lib.rs  validation.rs
crates/coderet-config/src/error/: format.rs
crates/coderet-config/src/loader/: env.rs  file.rs  merge.rs  mod.rs
crates/coderet-config/src/loader/formats/: json.rs  mod.rs  toml.rs
crates/coderet-config/src/types/: agent.rs  bm25.rs  chunking.rs  core.rs  llm.rs  mod.rs  ranking.rs  search.rs  summary.rs
crates/coderet-context/: Cargo.toml
crates/coderet-context/src/: context.rs  types.rs
crates/coderet-core/: Cargo.toml
crates/coderet-core/queries/: cpp.scm  go.scm  rust.scm  typescript.scm
crates/coderet-core/src/: lib.rs  llm.rs  models.rs  ranking.rs  relations.rs  relations_test.rs  scanner.rs  symbols.rs  tags_extractor.rs
crates/coderet-core/src/chunking/: generic.rs  mod.rs  splitter.rs
crates/coderet-core/src/chunking/languages/: go.rs  java.rs  php.rs  ruby.rs  rust.rs  typescript.rs
crates/coderet-core/src/stack_graphs/: builder.rs  loader.rs  mod.rs  tests.rs
crates/coderet-core/src/summaries/: generator.rs  mod.rs
crates/coderet-graph/: Cargo.toml
crates/coderet-graph/.test_db/: db
crates/coderet-graph/src/: graph.rs  lib.rs  path.rs
crates/coderet-graph/tests/: graph_helpers_test.rs
crates/coderet-index/: Cargo.toml
crates/coderet-index/src/: lexical.rs  lib.rs  manager.rs  summaries.rs  summaries_structured.rs  vector.rs
crates/coderet-index/tests/: contextual_test.rs  manager_test.rs  summary_test.rs
crates/coderet-pipeline/: Cargo.toml
crates/coderet-pipeline/src/: index.rs  manager.rs
crates/coderet-store/: Cargo.toml
crates/coderet-store/src/: lib.rs  (+9 more)
crates/coderet-tools/: Cargo.toml
crates/coderet-tools/src/: fs.rs  graph.rs  lib.rs  search.rs  summaries.rs
crates/coderet-tools/tests/: fs_tool_tests.rs
crates/config/: Cargo.toml
crates/context/: Cargo.toml
crates/context/src/: context.rs  lib.rs  types.rs
crates/core/: Cargo.toml
crates/core/queries/: c.scm  csharp.scm  java.scm  javascript.scm  python.scm
crates/core/src/: diff.rs  lib.rs  map.rs  models.rs  ranking.rs  relations.rs  scanner.rs  stack_graphs_symbols.rs  symbols.rs  tags_extractor.rs  traits.rs
crates/core/src/chunking/: generic.rs  mod.rs  splitter.rs  tokenizer.rs
crates/core/src/chunking/languages/: c.rs  cpp.rs  csharp.rs  javascript.rs  mod.rs  python.rs
crates/core/src/stack_graphs/: debugger.rs  manager.rs  mapper.rs  mod.rs  storage.rs
crates/core/src/stack_graphs/rules/: rust.tsg
crates/core/tests/: stack_graph_integration.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/engine/src/ingest/: pipeline.rs  service.rs
crates/engine/src/search/: mod.rs  service.rs
crates/graph/: Cargo.toml
crates/index/: Cargo.toml
crates/index/src/: lexical.rs  lib.rs  vector.rs
crates/pipeline/: Cargo.toml
crates/pipeline/src/: index.rs  lib.rs  manager.rs
crates/pipeline/tests/: stress_test.rs
crates/store/: Cargo.toml
crates/store/src/: chunk_store.rs  commit_log.rs  content_store.rs  file_blob_store.rs  file_store.rs  lib.rs  models.rs  storage.rs
crates/tools/: Cargo.toml
crates/tools/src/: fs.rs  graph.rs  lib.rs  search.rs
crates/tools/tests/: fs_tool_tests.rs
tui/: Cargo.toml
tui/src/: app.rs  embeddings_util.rs  lib.rs  rank_helper.rs  ui.rs
(+58 files in other folders)
