[workspace]
members = ["core", "cli", "tui"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
ignore = "0.4"
libm = "0.2" # Often needed for math
bincode = "1.3"
crossterm = "0.27"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tantivy = "0.22"
tokio = { version = "1", features = ["full"] }
tree-sitter = "0.23"
lance = "0.19"
arrow = "52.2"
fastembed = "4.0"
futures = "0.3"
