[workspace]
resolver = "2"
members = [
    "cli",
    "tui",
    "crates/coderet-agent",
    "crates/coderet-config",
    "crates/coderet-context",
    "crates/coderet-core",
    "crates/coderet-graph",
    "crates/coderet-index",
    "crates/coderet-pipeline",
    "crates/coderet-store",
    "crates/coderet-tools",
]

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde_json = "1.0"
ignore = "0.4"
libm = "0.2" # Often needed for math
bincode = "1.3"
crossterm = "0.27"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tantivy = "0.22"
tokio = { version = "1", features = ["full"] }
tree-sitter = "0.24.3"
lance = "0.39"
arrow = "56.2"
futures = "0.3"
globset = "0.4"
petgraph = "0.6"
rayon = "1.10"
itertools = "0.13"
once_cell = "1.19"
sha2 = "0.10"
hex = "0.4"
tempfile = "3.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
