[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "coderet"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
coderet-core = { path = "../crates/coderet-core" }
coderet-config = { path = "../crates/coderet-config" }
coderet-index = { path = "../crates/coderet-index" }
coderet-agent = { path = "../crates/coderet-agent" }
coderet-pipeline = { path = "../crates/coderet-pipeline" }
coderet-context = { path = "../crates/coderet-context" }
coderet-store = { path = "../crates/coderet-store" }
coderet-graph = { path = "../crates/coderet-graph" }
coderet-tools = { path = "../crates/coderet-tools" }
tokio = { workspace = true }
walkdir = "2.4"
globset = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
regex = "1.10"
serde = { workspace = true }
ignore = { workspace = true }
rayon = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
indicatif = "0.17"
console = "0.15"
termimad = "0.30"
