[package]
name = "emry-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "emry"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
emry-core = { path = "../crates/core" }
emry-config = { path = "../crates/config" }
emry-engine = { path = "../crates/engine" }
emry-agent = { path = "../crates/agent" }
emry-store = { path = "../crates/store" }
tokio = { workspace = true }
walkdir = "2.4"
globset = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
regex = "1.10"
serde = { workspace = true }
ignore = { workspace = true }
rayon = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
indicatif = "0.17"
console = "0.15"
termimad = "0.30"
textwrap = "0.16.2"
dialoguer = "0.11"
