[package]
name = "tui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
coderet-agent = { path = "../crates/coderet-agent" }
coderet-context = { path = "../crates/coderet-context" }
coderet-config = { path = "../crates/coderet-config" }
coderet-core = { path = "../crates/coderet-core" }
coderet-graph = { path = "../crates/coderet-graph" }
coderet-index = { path = "../crates/coderet-index" }
coderet-store = { path = "../crates/coderet-store" }
coderet-pipeline = { path = "../crates/coderet-pipeline" }
coderet-tools = { path = "../crates/coderet-tools" }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
globset = { workspace = true }
reqwest = { workspace = true, features = ["json", "blocking"] }
serde_json = { workspace = true }
