[package]
name = "emry-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
emry-core = { path = "../core" }
emry-config = { path = "../config" }
emry-engine = { path = "../engine" }
emry-store = { path = "../store" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"
futures = { workspace = true }
globset = { workspace = true }
ignore = "0.4"

[dev-dependencies]
tempfile = { workspace = true }