[package]
name = "coderet-context"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
coderet-config = { path = "../coderet-config" }
coderet-core = { path = "../coderet-core" }
coderet-graph = { path = "../coderet-graph" }
coderet-index = { path = "../coderet-index" }
coderet-store = { path = "../coderet-store" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }