[package]
name = "coderet-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
# New unified config system
coderet-config = { path = "../coderet-config" }
globset = { workspace = true }
ignore = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-python = "0.23"
reqwest = { workspace = true, features = ["json", "blocking"] }
serde_json = { workspace = true }
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.23"
text-splitter = { version = "0.17", features = ["tiktoken-rs"] }
tiktoken-rs = "0.5"
once_cell = "1.19"
async-trait = "0.1"
