[package]
name = "coderet-graph"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
coderet-store = { path = "../coderet-store" }
petgraph = { version = "0.6", features = ["serde-1"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.10"
