[package]
name = "coderet-pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
coderet-config = { path = "../coderet-config" }
coderet-core = { path = "../coderet-core" }
coderet-store = { path = "../coderet-store" }
coderet-index = { path = "../coderet-index" }
coderet-context = { path = "../coderet-context" }
coderet-graph = { path = "../coderet-graph" }
tokio = { workspace = true }
futures = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
indicatif = "0.17"
regex = "1.10"
tracing = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
tantivy = { workspace = true }
arrow = { workspace = true }