[package]
name = "coderet-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
coderet-config = { path = "../coderet-config" }
coderet-context = { path = "../coderet-context" }
coderet-core = { path = "../coderet-core" }
coderet-graph = { path = "../coderet-graph" }
coderet-index = { path = "../coderet-index" }
coderet-pipeline = { path = "../coderet-pipeline" }
coderet-store = { path = "../coderet-store" }
globset = { workspace = true }
serde = { workspace = true, features = ["derive"] }
