[package]
name = "emry-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
# New unified config system
emry-config = { path = "../config" }
globset = { workspace = true }
ignore = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-tags = "0.24"
tree-sitter-rust = "0.23.2"
tree-sitter-go = "0.23"
tree-sitter-python = "0.23"

tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.23"
text-splitter = { version = "0.17", features = ["tiktoken-rs"] }
tiktoken-rs = "0.5"
once_cell = "1.19"
async-trait = "0.1"
tracing = { workspace = true }
tree-sitter-cpp = "0.23"
tree-sitter-stack-graphs = { version = "0.10" }
stack-graphs = { version = "0.14" }
tree-sitter-graph = "0.12"
lsp-positions = "0.3"
streaming-iterator = "0.1"

# Official language-specific stack-graphs crates
tree-sitter-stack-graphs-python = { version = "0.3" }
tree-sitter-stack-graphs-javascript = { version = "0.3" }
tree-sitter-stack-graphs-typescript = { version = "0.4" }
tree-sitter-stack-graphs-java = { version = "0.5" }
