[package]
name = "emry-store"
version = "0.1.0"
edition = "2021"

[dependencies]
surrealdb = { version = "2.0", features = ["kv-rocksdb"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
emry-core = { path = "../core" }
