[package]
name = "emry-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
emry-config = { path = "../config" }
emry-context = { path = "../context" }
emry-core = { path = "../core" }
emry-graph = { path = "../graph" }
emry-index = { path = "../index" }
emry-pipeline = { path = "../pipeline" }
emry-store = { path = "../store" }
globset = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
